<resources>
    <string name="mdl_app_name">MDLIVE</string>
    <string name="mdl_doctor_list">DoctorList</string>
    <string name="mdl_settings">Settings</string>
    <string name="mdl_login">LOGIN</string>
    <string name="mdl_forgot_username">Forgot Username</string>
    <string name="mdl_username">Username</string>
    <string name="mdl_password">Password</string>
    <string name="mdl_title_activity_home">HomeActivity</string>
    <string name="mdl_title_video_home">Video Consultation</string>
    <string name="mdl_invalid_credentials">Invalid Username or password</string>
    <string name="mdl_empty_credentials">Username and password should not be empty</string>
    <string name="mdl_home">Home</string>
    <string name="mdl_welcome">Welcome</string>
    <string name="mdl_sav">Schedule a Visit</string>
    <string name="mdl_mdlive_assist">MDLIVE Assist</string>
    <string name="mdl_my_health">My Health</string>
    <string name="mdl_message_center">Message Center</string>
    <string name="mdl_symptom_checker">Symptom Checker</string>
    <string name="mdl_my_account">My Account</string>
    <string name="mdl_ok_upper">OK</string>
    <string name="mdl_Ok">Ok</string>
    <string name="mdl_true_txt">true</string>
    <string name="mdl_binary_true">1</string>
    <string name="mdl_binary_false">0</string>
    <string name="mdl_delete">Delete</string>
    <string name="mdl_please_wait">Please wait</string>
    <string name="mdl_your_consultation">Your Consultation</string>
    <string name="mdl_summary">SUMMARY</string>
    <string name="mdl_test">Test</string>
    <string name="mdl_dollar_Amount49">$49.00</string>
    <string name="mdl_rate_consulatation">RATE CONSULTATION</string>
    <string name="mdl_done">Done</string>
    <string name="mdl_dollar">$</string>
    <string name="mdl_dollar_symbol">$</string>
    <string name="mdl_amount_zero">0.00</string>
    <string name="mdl_error">Error</string>
    <string name="mdl_image_name_upper">IMAGE NAME</string>
    <string name="mdl_upload_upper">UPLOAD</string>
    <string name="mdl_delete_customer_successfully">Customer document deleted successfully</string>
    <string name="mdl_medical_history">Medical History</string>
    <string name="mdl_last_update">Last Updated</string>
    <string name="mdl_yes">Yes</string>
    <string name="mdl_no">No</string>
    <string name="mdl_pre_existing_conditions">Pre-Existing Conditions</string>
    <string name="mdl_no_conditions_reported">No pre-existing\nconditions reported</string>
    <string name="mdl_no_condition_reported">No conditions reported</string>
    <string name="mdl_pediatric_completed_txt">Completed</string>
    <string name="mdl_pediatric_notcompleted_txt">Not Completed</string>
    <string name="mdl_edit_upper">EDIT</string>
    <string name="mdl_medications">Medications</string>
    <string name="mdl_allergies">Allergies</string>
    <string name="mdl_photos_upper">PHOTOS</string>
    <string name="mdl_helpful_for_rashes">Helpful for rashes, cuts, etc.</string>
    <string name="mdl_take_photo">Take a photo</string>
    <string name="mdl_add_conditions">Add Conditions</string>
    <string name="mdl_procedures">Procedures</string>
    <string name="mdl_behaviour">Behaviour</string>
    <string name="mdl_health_conditions">Health Conditions</string>
    <string name="mdl_behavioural_health_history">Behavioural Health History</string>
    <string name="mdl_billing_info">Billing information</string>
    <string name="mdl_payment_credit_card">Your credit card will only be used for the\nconsultation cost and will be charged after your consultation.</string>
    <string name="mdl_expiration_date">Expiration Date</string>
    <string name="mdl_mm_yy">00/00</string>
    <string name="mdl_zip_code">Zip Code</string>
    <string name="mdl_payment_zipcode_hint">12345-7890</string>
    <string name="mdl_card_type">Is this an FSA/HSA card?</string>
    <string name="mdl_apply_offer_code">Apply Offer Code</string>
    <string name="mdl_payment_total">Total :$49.00</string>
    <string name="mdl_total_amount_in_doller">Total :$</string>
    <string name="mdl_HostedPCI_webview_loadurl">file:///android_asset/htdocs/index.html</string>
    <string name="mdl_expiration_month_year">Expiration month/year</string>
    <string name="mdl_Month_year">MM/yy</string>
    <string name="mdl_MM_yyyy">MM/yyyy</string>
    <string name="mdl_please_enter_valid_zipcode">Please enter a valid Zipcode.</string>
    <string name="mdl_please_fill_required_fields">Please fill in all the required fields</string>
    <string name="mdl_exception_in_thread">Exception in thread</string>
    <string name="mdl_cancel_upper">CANCEL</string>
    <string name="mdl_pharmacy_details_updated">Pharmacy details updated</string>
    <string name="mdl_credit_header">Credit Card</string>
    <string name="mdl_consultation_header">Your Consultation</string>
    <string name="mdl_welcome_back">Welcome back!</string>
    <string name="mdl_resume_saved_consultation">Please resume your saved consultation to speak to your doctor</string>
    <string name="mdl_consultation_info">CONSULTATION INFO</string>
    <string name="mdl_patient">Patient:</string>
    <string name="mdl_reason">Reason:</string>
    <string name="mdl_doctor">Doctor:</string>
    <string name="mdl_choosen_pharmacy_upper">CHOSEN PHARMACY</string>
    <string name="mdl_resume_consultation_txt">Resume Consultation</string>
    <string name="mdl_ph_manual_search">MANUAL SEARCH</string>
    <string name="mdl_ph_zipcode">ZIP Code</string>
    <string name="mdl_ph_or_str">OR</string>
    <string name="mdl_ph_Or_str">Or</string>
    <string name="mdl_empty_string"></string>
    <string name="mdl_preferred">Preferred</string>
    <string name="mdl_doctor_on_call">Doctor On Call</string>
    <string name="mdl_average_wait">Average Wait Time: 6 min</string>
    <string name="mdl_average_wait_dots">Average Wait: ...</string>
    <string name="mdl_see_doctor_on_call">See Doctor on Call</string>
    <string name="mdl_see_first_available_doctor">See First Available Doctor</string>
    <string name="mdl_choose_other_doctor">Choose Other Doctor</string>
    <string name="mdl_filter_upper">FILTER</string>
    <string name="mdl_weight">Weight</string>
    <string name="mdl_lbs">lbs</string>
    <string name="mdl_locating_available_doctors">locating available doctors</string>
    <string name="mdl_telephone_number">Telephone Number</string>
    <string name="mdl_doctoroncall_txt">Doctor On-Call is a 24 hour service where\n you can get an instant consultation by phone with the available doctor.</string>
    <string name="mdl_reason_txt">Hello Test, what seems to be the\n best problem today?</string>
    <string name="mdl_card_txt">Please fill your credit card information below :</string>
    <string name="mdl_choose_provider">Choose Doctor</string>
    <string name="mdl_available_txt"> Available 24/7 by phone</string>
    <string name="mdl_doctorOnCall_txt">Doctor on call</string>
    <string name="mdl_video_or_phone">video or phone</string>
    <string name="mdl_phone">phone</string>
    <string name="mdl_doctor_details">Provider Profile</string>
    <string name="mdl_general_practise">General Practise</string>
    <string name="mdl_capital_regional">Capital Regional\nMedical Center</string>
    <string name="mdl_qualifications">Qualifications</string>
    <string name="mdl_specialties">Specialties</string>
    <string name="mdl_licensed_in">Licensed In</string>
    <string name="mdl_languages_spoken">Languages Spoken</string>
    <string name="mdl_provider_location">Location</string>
    <string name="mdl_education">Education     </string>
    <string name="mdl_about_me">About Me     </string>
    <string name="mdl_request_appointment">Request Appointment</string>
    <string name="mdl_with_patient">With Patient</string>
    <string name="mdl_date_time_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="mdl_make_appointment_txt">Request Appointment</string>
    <string name="mdl_confirm_appointment_txt">Confirm Appointment</string>
    <string name="mdl_time_for_visit_txt">Time For Visit</string>
    <string name="mdl_other_available_time">Other Available Times</string>
    <string name="mdl_notimeslots_txt">This doctor is not available on date.Please select a different date or make an appointment request.</string>
    <string name="mdl_currently_with_patient">Currently with patient</string>
    <string name="mdl_not_available">not available</string>
    <string name="mdl_choose">Choose </string>
    <string name="mdl_select_provider">Or choose a specific provider below</string>
    <string name="mdl_select_provider_olyfilter">Choose a specific provider below</string>
    <string name="mdl_get_started">Patient Information</string>
    <string name="mdl_get_started_txt">GET STARTED</string>
    <string name="mdl_patientTxt">Patient</string>
    <string name="mdl_dateOfBirth">Date of Birth</string>
    <string name="mdl_dateformat">mm/dd/yyyy</string>
    <string name="mdl_plscalAlert_txt">Please call %1$s to  add another child.</string>
    <string name="mdl_phonenumber">Phone Number</string>
    <string name="mdl_disclaimertxt">Your phone number will only be used if customer support is required.</string>
    <string name="mdl_nextBtn">Your phone number will only be used if customer support is required.</string>
    <string name="mdl_gender">Gender</string>
    <string name="mdl_addChildBtn">Add Child</string>
    <string name="mdl_location">Current Location</string>
    <string name="mdl_next_btn">Next</string>
    <string name="mdl_arTxt">AR</string>
    <string name="mdl_providerTypeTxt">Provider Type</string>
    <string name="mdl_pediatricianTxt">Pediatrician</string>
    <string name="mdl_locationTxt">My Location</string>
    <string name="mdl_markMarinoTxt">Mark Marino</string>
    <string name="mdl_please_choose">Please Choose</string>
    <string name="mdl_gone_to_emergency">Gone to the Emergency Room</string>
    <string name="mdl_used_urgent_care">Used Urgent Care/Retail Clinic</string>
    <string name="mdl_seen_my_provider">Seen my provider in Person</string>
    <string name="mdl_done_nothing">Done nothing</string>
    <string name="mdl_administrative_level1">administrative_area_level_1</string>
    <string name="mdl_provider_txt">Please enter the phone number \nwe should call:</string>
    <string name="mdl_visit_txt"> If you had not had this visit today\nwhat would you do?</string>
    <string name="mdl_primary_txt"> Do you have a primary care provider?</string>
    <string name="mdl_valid_phone_number">Please enter a valid Phone number</string>
    <string name="mdl_call_to_add_another_child">Please call 1-888-818-0978 to \nadd another child.</string>
    <string name="mdl_check_false">false</string>
    <string name="mdl_adult_share_account">The adult dependent has opted not to share his account</string>
    <string name="mdl_getstarted">getstarted</string>
    <string name="mdl_header_reason_txt">Reason for visit</string>
    <string name="mdl_subheader_therapist_txt">What is your reason for seeking behavioral health (Check all that apply)</string>
    <string name="mdl_subheader_reason_txt">What is the reason for your visit?</string>
    <string name="mdl_searchsymptom_txt">Search symptoms</string>
    <string name="mdl_Gender">gender</string>
    <string name="mdl_patient_name">Patient Name</string>
    <string name="mdl_add_child">Add Child</string>
    <string name="mdl_child_must_be_younger_than">Child must be younger than 18 years old.</string>
    <string name="mdl_first_name">First Name</string>
    <string name="mdl_last_name">Last Name</string>
    <string name="mdl_date_of_birth">Date of Birth</string>
    <string name="mdl_date_of_birth_hint">mm/dd/yyyy</string>
    <string name="mdl_i_michelle_text">I,Michelle Marino confirm that I\'m the legal parent / guardian of the minor above.</string>
</resources>